--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Brought to you by National Informatics Centre &nbsp;&nbsp;<br><br></strong></p>
             </tr>-->
       
             <tr> 
-              <td align="center"colspan="2"style="font-size:14px;padding-right:2px;"><button><a href="https://cbsc4.github.io/CBSC4/" style="text-decoration: none;color:black">Submit</a></button>&nbsp&nbsp&nbsp<button>Reset</button></td>
+              <td align="center"colspan="2"style="font-size:14px;padding-right:2px;"><button><a href="https://cbsc4.github.io/CBSC4/" style="text-decoration: none;color:black">Submit</a></button>&nbsp&nbsp&nbsp<button><a href="https://cbsc4.github.io/CBSC41/">Reset</a></button></td>
              
             </tr>
           <tr align="center"><td>
