--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ img
 			<table style="width:100%; border-collapse: collapse; border:2px solid white">
 				<tr>
 					<td>Receipt No: 9316</td>
-					<td style="border-left:2px solid white;" align="right">Date 17-08-2023</td>
+					<td style="border-left:2px solid white;" align="right">Date 30-11-2023</td>
 				</tr>	
 					
 			</table>	
@@ -73,19 +73,23 @@ img
 	<td colspan="2" align="center">35000</td>
   </tr>
   <tr>
-    <td colspan="2" align="center">1st Semester Tution Fee</td>
+    <td colspan="2" align="center">2nd Semester Tution Fee</td>
 	<td colspan="2" align="center">30000</td>
   </tr>
   
   <tr>
-    <td colspan="2">Mode:Bank  Chq No.272915 BOI Chq. Date:2023-08-17(Subject to<br> 
+   <!-- 
+	<td colspan="2">Mode:Bank  Chq No.272915 BOI Chq. Date:2023-08-17(Subject to<br> 
 	Realisation) | Collected By: cash_counter2<br>
 	Remarks: BOI-272915</td>
-	<td colspan="2"><b>Total Amount : Rs.65000</b></td>
+	-->
+	<td colspan="2">Cash</td>
+	
+	<td colspan="2"><b>Total Amount : Rs.30000</b></td>
   </tr>
   
   <tr>
-    <td colspan="4" style="text-decoration: overline; text-align:right;"><br><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Authorised Signatory</td>
+    <td colspan="4" style="text-decoration: overline; text-align:right;"><br><br><br><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Authorised Signatory</td>
 	
   </tr>
 
@@ -100,5 +104,4 @@ img
 
 </body>
 </html>
-
 
