--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ img
   </tr>
   
   <tr>
-    <td colspan="2" align="center">Admission Fee (One Time)</td>
+    <td colspan="2" align="center"></td>
 	<td colspan="2" align="center">35000</td>
   </tr>
   <tr>
