--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ img
   
   <tr>
     <td colspan="2" align="center"></td>
-	<td colspan="2" align="center">35000</td>
+	<td colspan="2" align="center"></td>
   </tr>
   <tr>
     <td colspan="2" align="center">2nd Semester Tution Fee</td>
