--- a/index.html
+++ b/index.html
@@ -68,10 +68,7 @@ img
 	<td colspan="2" align="center"><b>Amount</b></td>
   </tr>
   
-  <tr>
-    <td colspan="2" align="center"></td>
-	<td colspan="2" align="center"></td>
-  </tr>
+  
   <tr>
     <td colspan="2" align="center">2nd Semester Tution Fee</td>
 	<td colspan="2" align="center">30000</td>
@@ -94,7 +91,7 @@ img
   </tr>
 
 </table>
-
+<table>
 </p>
 <br><br><br><br><br>
 <div style="text-align:left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;https://www.sgimis.com/money_receipt_dup.php?pid=52777</div>
