--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@ img
 	<td colspan="2" align="center"><b>Amount</b></td>
   </tr>
   
-  
+  <!--
+  <tr>
+    <td colspan="2" align="center">Admission Fee (One Time)</td>
+	<td colspan="2" align="center">35000</td>
+  </tr>
+  -->
   <tr>
     <td colspan="2" align="center">2nd Semester Tution Fee</td>
 	<td colspan="2" align="center">30000</td>
