--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ img
 <table>
 </p>
 <br><br><br><br><br>
-<div style="text-align:left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;https://www.sgimis.com/money_receipt_dup.php?pid=52777</div>
+<div style="text-align:left;font-size:12px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;https://www.sgimis.com/money_receipt_dup.php?pid=52777</div>
 </div>
 </p>
 
